Changes to file names and location

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="porti styles.css">
+    <link rel="stylesheet" href="./assets/css/portifolio-styles.css">
     
 </head>
 <body>
@@ -45,7 +45,7 @@
 
     <div class="about-me-container">
         <div class="left-col">
-            <img src="Images/2203549_admin_avatar_human_login_user_icon.png" class="about-image" alt=""
+            <img src="./assets/images/avatar.png" class="about-image" alt=""
             style="width: 330px;height: 400px;">
         </div>
         <div class="right-col">
