Changed the about photo

--- a/Index.html
+++ b/Index.html
@@ -45,8 +45,8 @@
 
     <div class="about-me-container">
         <div class="left-col">
-            <img src="./assets/images/avatar.png" class="about-image" alt=""
-            style="width: 330px;height: 400px;">
+            <img src="./assets/images/photo.jpg" class="about-image" alt=""
+            style="width: 250px;height: 450px;">
         </div>
         <div class="right-col">
             <p class="about-para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ducimus ab quo, odit dolore porro totam quidem libero excepturi ratione, obcaecati quam odio sequi reprehenderit laudantium, eum facere. Fuga, tenetur? </p>
