Changes to link tags

--- a/Index.html
+++ b/Index.html
@@ -21,9 +21,9 @@
                 <li class="link-item"><a href="#" class="active link">Home</a></li>
                 <li class="link-item"><a href="#myprojects" class="link">Projects</a></li>
                 <li class="link-item"><a href="#about-me" class="link">About</a></li>
-                <li class="link-item"><a href="https://glory-atom-c90.notion.site/Java-Scanner-da5e72efaaab436b903d12318f66" class="link" target="_blank">Blog / Notes</a></li>
-                <li class="link-item"><a href="http://www.youtube.com/channel/UCxZ9OmGT6LlMAnAJWlffEbA" class="link">Tutorials </a></li>
-                <li class="link-item"><a href="#contact-section" class="link">Contact me</a></li>
+                <li class="link-item"><a href="https://twitter.com/matthew__waynz/" class="link" target="_blank">Twitter</a></li>
+                <li class="link-item"><a href="https://youtube.com/channel/UCxZ9OmGT6LIMAnAJWlffEbA" class="link">YouTube </a></li>
+                <li class="link-item"><a href="mailto:nyongezamatthew20@gmail.com" class="link">Contact me</a></li>
             </ul>    
             </nav>
         
