--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PORTFOLIO</title>
     <link rel="stylesheet" href="./assets/css/portifolio-styles.css">
+    <link rel="icon favicon" href="./assets/images/LOGO2.png">
     
 </head>
 <body>
@@ -46,7 +47,7 @@
     <div class="about-me-container">
         <div class="left-col">
             <img src="./assets/images/photo.jpg" class="about-image" alt=""
-            style="width: 300px;height: 400px;">
+            style="width: 350px;height: 450px;">
         </div>
         <div class="right-col">
             <p class="about-para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ducimus ab quo, odit dolore porro totam quidem libero excepturi ratione, obcaecati quam odio sequi reprehenderit laudantium, eum facere. Fuga, tenetur? </p>
