--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/portifolio-styles.css">
+    <link rel="icon favicon" href="./assets/images/default-monochrome.svg">
     
 </head>
 <body>
@@ -45,8 +46,8 @@
 
     <div class="about-me-container">
         <div class="left-col">
-            <img src="./assets/images/photo.jpg" class="about-image" alt=""
-            style="width: 280px;height: 380px;">
+            <img src="./assets/images/avatar.png" class="about-image" alt=""
+            style="width: 300px;height: 320px;">
         </div>
         <div class="right-col">
             <p class="about-para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ducimus ab quo, odit dolore porro totam quidem libero excepturi ratione, obcaecati quam odio sequi reprehenderit laudantium, eum facere. Fuga, tenetur? </p>
@@ -130,6 +131,7 @@
     <input type="hidden" name="referrer" id="referrer_field" />
 
     <input type="hidden" name="body" />
+    </form>
 
 </section>
 
